tests/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
  labels:
    app.kubernetes.io/name: clickhouse-qualification
spec:
  selector:
    app.kubernetes.io/name: clickhouse-qualification
  ports:
    - name: https
      port: 8443
      targetPort: https
    - name: native-tls
      port: 9440
      targetPort: native-tls
